--- a/static/scss/_typography.scss
+++ b/static/scss/_typography.scss
@@ -1,3 +1,7 @@
+body {
+  color: $light;
+}
+
 .x-small {
   font-size: x-small;
 }
